# DriverAtlas

./: .gitignore  README.md  pyproject.toml
corpus/filesystem/: clfs.yaml  fastfat.yaml  ntfs.yaml
corpus/kernel_streaming/: ks.yaml  ksthunk.yaml  mskssrv.yaml
corpus/kmdf/: vhidmini.yaml
corpus/minifilter/: appid.yaml  cldflt.yaml  wcifs.yaml
corpus/network/: afd.yaml  http.yaml  tcpip.yaml
corpus/vpn/: acsock64.yaml  fortips.yaml
driveratlas/: __init__.py  blocklist.py  canonical.py  cli.py  corpus.py  framework_detect.py  hunter.py  loldrivers_pipeline.py  scanner.py  scoring.py
driveratlas/tier2/: __init__.py  gadget_scanner.py  ghidra_runner.py  ioctl_analyzer.py  kdu_scorer.py  taint_analyzer.py  yara_generator.py
ghidra_scripts/: ExportDriverDispatch.py
signatures/: api_categories.yaml  attack_surface.yaml  frameworks.yaml
tests/: test_blocklist.py  test_framework_detect.py  test_hunter.py  test_scanner.py  test_scoring.py  test_tier2.py
